Fix overflow issue

--- a/bladesDodger/stylesheet.css
+++ b/bladesDodger/stylesheet.css
@@ -10,6 +10,7 @@
 		padding: 0px;
 		margin: 0px;
 		box-shadow: 0px 0px 20px #333333 inset;
+		overflow: hidden;
 	}
 
 	#container {
